--- a/chiffee/static/chiffee/css/admin-accounts.css
+++ b/chiffee/static/chiffee/css/admin-accounts.css
@@ -77,8 +77,10 @@
     border: var(--border-profile-picture-container);
     border-radius: 5px;
     height: 100px;
+    left: 100px;
     opacity: 0;
     pointer-events: none;
     position: absolute;
+    top: 100px;
     width: 100px;
 }
